--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "4.5",
+        "stripe/stripe-php": "^16.4",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
